fix(home): fix missing borders on top and bottom elements of home page

--- a/src/scss/imports/_global.scss
+++ b/src/scss/imports/_global.scss
@@ -117,3 +117,7 @@ h2 {
     min-height: 50px;
     line-height: 35px;
 }
+
+.list-inset {
+    border-radius: 0;
+}
